Bundle prebuilt rescomp extension jar and allow JRE-only builds